fix alignment

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ img {
 .pago__info {
   justify-content: center;
   display: flex;
-  align-items: flex-start;
+  align-items: center;
   gap: 0.5rem;
   width: 100%;
   margin-inline: auto;
@@ -58,10 +58,6 @@ img {
   z-index: 4;
 }
 .plan__row {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  gap: 1rem;
   padding:  0.25rem 4rem 0.25rem 1rem;
 }
 
@@ -110,7 +106,6 @@ img {
   justify-content: space-evenly;
   align-items: center;
   gap: 0.5rem;
-  box-shadow: -6px 6px 0 hsl(139deg 96% 24%);
   margin: 0 auto;
 }
 .counter__number {
@@ -143,6 +138,10 @@ img {
   font-size: 0.8rem;
 }
 
+.plan__content{
+  display: grid;
+  grid-template-columns: 1fr auto;
+}
 .text--small {
   font-size: 0.8rem;
 }
